<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>alambic</groupId>
    <artifactId>alambic-parent</artifactId>
    <version>2.0.6-RC09-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Alambic</name>

    <modules>
        <module>product</module>
        <module>devops</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties> <!-- remove warning when compiling with maven, make encoding non-platform dependent -->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.naming/com.sun.jndi.ldap=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <encoding>UTF-8</encoding>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <!--                    <argLine></argLine> &lt;!&ndash; set protocol version of amqp unit test &ndash;&gt;-->
                    <argLine>-Dqpid.amqp.version=0-91 --add-opens java.base/java.nio.charset=ALL-UNNAMED --add-opens
                        java.base/java.lang.reflect=ALL-UNNAMED --add-opens
                        java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/sun.nio.cs=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens
                        java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens
                        java.base/java.net=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/java.util.stream=ALL-UNNAMED --add-opens
                        java.base/java.nio.file=ALL-UNNAMED --add-opens java.base/sun.nio.fs=ALL-UNNAMED
                    </argLine> <!-- Java arguments line to open modules that are required for the test -->
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:https://github.com/AC-Rennes-OpenSource/alambic.git</connection>
        <developerConnection>scm:git:https://github.com/AC-Rennes-OpenSource/alambic.git</developerConnection>
    </scm>

    <distributionManagement>
        <repository>
            <id>${releaseRepoId}</id>
            <url>${releaseRepoUrl}</url>
        </repository>
        <snapshotRepository>
            <id>${snapshotRepoId}</id>
            <url>${snapshotRepoUrl}</url>
        </snapshotRepository>
    </distributionManagement>

</project>
